manifests/overlays/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: intermediate-ca-cluster-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: kspeeder.infra.an
    http: &httpRule
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              name: http
  tls:
  - hosts:
    - kspeeder.infra.an
    secretName: kspeeder-server-tls
